--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   build:
     image: mynick/my-app-name:1.0.0
-    env_file: ./.env-app
+    env_file: ../.env
     volumes:
       - ../build:/home/node/build
 
